--- a/Epigraver/Info.plist
+++ b/Epigraver/Info.plist
@@ -21,6 +21,6 @@
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2018 Robert Beeger. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
-	<string>Fortune.Fortune</string>
+	<string>Epigraver.Main</string>
 </dict>
 </plist>
